# rag_lab_week2_uv

./: .env.example  .gitignore  INSTRUCTOR_INTRO.md  README.md  STUDENT_GUIDE.md  pyproject.toml  requirements.txt  streamlit_app.py
app/: config.py  db.py  main.py  models.py
app/store/: __init__.py  base.py  mongo_repo.py  tiny_repo.py
notebook/: 00_store_smoke_test.ipynb
sql/: schema.sql
