[project]
name = "rag-lab"
version = "0.2.1"
description = "Postgres + document store (MongoDB/TinyDB) with FastAPI + Streamlit"
readme = "README.md"
requires-python = ">=3.10"

# Core backend dependencies (required for everyone)
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "psycopg>=3.1",
  "pydantic>=2.5",
  "pymongo>=4.6",
  "tinydb>=4.8",
  "requests>=2.31",
  "python-dotenv>=1.0",
]

# Optional components students can install when needed
[project.optional-dependencies]

# Streamlit UI
ui = [
  "streamlit>=1.30,<2.0"
]

# Jupyter Notebook support
notebook = [
  "ipykernel>=6.29",
  "jupyter>=1.0"
]

# uv configuration 
[tool.uv]

# Force public PyPI — fixes numpy download failures
index-url = "https://pypi.org/simple"